[#123] 사용자 거리기반 모임 조회 응답 값 수정  (#124)
* feat(Crew): 위경도 api 응답 DTO
- 위경도를 통해 가게를 지도에 마킹하는 api에서 사용하는 응답 DTO입니다. 프론트의 요청으로 경도, 위도, 가게 아이디를 반환합니다.

* refactor(Crew): 위경도 응답 DTO를 반환하도록 수정
- 기존의 응답 DTO에서 위경도, 가게아이디를 가지는 응답 DTO를 반환하도록 수저하였습니다.

* refactor(Crew): 위경도 응답 DTO를 반환 테스트